Done: Team headshots header alignment fixed

--- a/static/thesignal.css
+++ b/static/thesignal.css
@@ -1312,6 +1312,15 @@ body > * {
         height: 50px;
         margin-top: 100px;
     }
+
+    .headshots > .two.left.wide.column {
+        width: 100% !important;
+    }
+
+    .about-grid > h4 {
+        text-align: center !important;
+        width: 100% !important;
+    }
 }
 
 @media only screen and (max-width: 1000px) {
